idf_component_register(
    SRCS
        "wifi_configuration_ap.cc"
        "wifi_station.cc"
        "ssid_manager.cc"
        "dns_server.cc"
    INCLUDE_DIRS
        "include"
    EMBED_TXTFILES
        "assets/wifi_config.html"
        "assets/wifi_config_done.html"
        "assets/wifi_config_advanced.html"
    EMBED_FILES
        "assets/wifi_config.jpg"
        "assets/wifi_config_success.jpg"
    REQUIRES
    	"esp_timer"
        "esp_http_server"
        "esp_wifi"
        "nvs_flash"
        "json"
)
